nic#15.3 : product-api refactored, ProductsDB instance in products handler to manage CRUD
