# product-api/handlers/products.go
@@ -2,22 +2,21 @@ package handlers
 
 import (
 	"fmt"
-	"log"
 
-	"github.com/satoshi-u/go-microservices/currency/pb"
+	"github.com/hashicorp/go-hclog"
 	"github.com/satoshi-u/go-microservices/product-api/data"
 )
 
 // Products is an http.handler
 type Products struct {
-	l  *log.Logger
-	v  *data.Validation
-	cc pb.CurrencyClient
+	l   hclog.Logger
+	v   *data.Validation
+	pdb *data.ProductsDB
 }
 
 // NewProducts returns a new products handler with the given logger & validator
-func NewProducts(l *log.Logger, v *data.Validation, cc pb.CurrencyClient) *Products {
-	return &Products{l, v, cc}
+func NewProducts(l hclog.Logger, v *data.Validation, pdb *data.ProductsDB) *Products {
+	return &Products{l, v, pdb}
 }
 
 // KeyProduct to use as key when putting Product to r.Context()
@@ -35,47 +34,3 @@ type GenericError struct {
 type ValidationError struct {
 	Messages []string `json:"messages"`
 }
-
-// ServeHTTP - handler **********************************************************************
-// func (p *Products) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-// 	// log Request
-// 	p.l.Println("Request received :::: Products Handler")
-// 	if r.Method == http.MethodGet {
-// 		p.getProducts(rw, r)
-// 		return
-// 	}
-// 	if r.Method == http.MethodPost {
-// 		p.addProducts(rw, r)
-// 		return
-// 	}
-// 	if r.Method == http.MethodPut {
-// 		p.l.Println("MethodPut")
-// 		// expect the id in the URI
-// 		reg := regexp.MustCompile(`/([0-9]+)`)
-// 		group := reg.FindAllStringSubmatch(r.URL.Path, -1)
-// 		if len(group) != 1 {
-// 			p.l.Println("Invalid URI: more than one id")
-// 			http.Error(rw, "Invalid URI", http.StatusBadRequest)
-// 			return
-// 		}
-// 		if len(group[0]) != 2 {
-// 			p.l.Println("Invalid URI: more than one capture group")
-// 			http.Error(rw, "Invalid URI", http.StatusBadRequest)
-// 			return
-// 		}
-// 		idString := group[0][1]
-// 		id, err := strconv.Atoi(idString)
-// 		if err != nil {
-// 			p.l.Println("Invalid URI: unable to convert to number", idString)
-// 			http.Error(rw, "Invalid URI", http.StatusBadRequest)
-// 			return
-// 		}
-
-// 		p.l.Println("Got id: ", id)
-// 		p.updateProducts(id, rw, r)
-// 		return
-// 	}
-
-// 	// catch all
-// 	rw.WriteHeader(http.StatusMethodNotAllowed)
-// }
