# product-api/main.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"context"
-	"log"
 	"net/http"
 	"os"
 	"os/signal"
@@ -12,6 +11,8 @@ import (
 	"github.com/go-openapi/runtime/middleware"
 	gorHandlers "github.com/gorilla/handlers"
 	"github.com/gorilla/mux"
+	"github.com/hashicorp/go-hclog"
+	"github.com/nicholasjackson/env"
 	"github.com/satoshi-u/go-microservices/currency/pb"
 	"github.com/satoshi-u/go-microservices/product-api/data"
 	"github.com/satoshi-u/go-microservices/product-api/handlers"
@@ -23,7 +24,9 @@ import (
 // go run main.go
 // hello   -> curl -v localhost:9090 -d sarthak
 // GET     -> curl -v localhost:9090/products | jq
-// GET/{id}-> curl -v localhost:9090/products/2 | jq
+// GET     -> curl -v "localhost:9090/products?currency=INR" | jq
+// GET     -> curl -v localhost:9090/products/2 | jq
+// GET     -> curl -v "localhost:9090/products/2?currency=INR" | jq
 // POST    -> curl -v localhost:9090/products -d '{"name": "Indian Tea", "description": "nice cup of tea", "price": 3.14, "sku": "prod-bev-003"}'| jq
 // POST    -> curl -v localhost:9090/products -d '{"name": "coffee $1", "description": "cheap coffee", "price": 1.00, "sku": "prod-bev-004"}'| jq
 // PUT   	 -> curl -v localhost:9090/products -XPUT -d '{"id": 1, "name": "Cappuccino", "description": "steamed milk foam", "price": 5.00, "sku": "prod-bev-001"}'| jq
@@ -31,9 +34,16 @@ import (
 
 // create swagger.yaml       -> make swagger
 // codegen from swagger.yaml -> swagger generate client -f ../swagger.yaml -A product-api
+
+var bindAddress = env.String("BIND_ADDRESS", false, ":9090", "Bind address for the server")
+
 func main() {
+
+	env.Parse()
+
 	// logger
-	l := log.New(os.Stdout, "product-api", log.LstdFlags)
+	// l := log.New(os.Stdout, "product-api", log.LstdFlags)
+	l := hclog.Default()
 	// validation
 	v := data.NewValidation()
 	// client gRPC conn
@@ -43,8 +53,10 @@ func main() {
 	}
 	defer conn.Close()
 	cc := pb.NewCurrencyClient(conn)
-	// handler instantiate with constructor dependency injection : logger, validation, conn
-	ph := handlers.NewProducts(l, v, cc)
+	// ProductsDB instance
+	pdb := data.NewProductsDB(cc, l)
+	// handler instantiate with constructor dependency injection : logger, validation, ProductsDB
+	ph := handlers.NewProducts(l, v, pdb)
 	// hh := handlers.NewHello(l)
 
 	// new std lib mux : create mux and register handlers
@@ -56,7 +68,9 @@ func main() {
 	sm := mux.NewRouter()
 	getRouter := sm.Methods(http.MethodGet).Subrouter()
 	getRouter.HandleFunc("/products", ph.GetProducts)
-	getRouter.HandleFunc("/products/{id}", ph.GetProduct)
+	getRouter.HandleFunc("/products", ph.GetProducts).Queries("currency", "{[A-Z]{3}}")
+	getRouter.HandleFunc("/products/{id:[0-9]+}", ph.GetProduct)
+	getRouter.HandleFunc("/products/{id:[0-9]+}", ph.GetProduct).Queries("currency", "{[A-Z]{3}}")
 
 	putRouter := sm.Methods(http.MethodPut).Subrouter()
 	putRouter.HandleFunc("/products", ph.UpdateProducts)
@@ -67,7 +81,7 @@ func main() {
 	postRouter.Use(ph.MiddlewareValidateProduct)
 
 	deleteRouter := sm.Methods(http.MethodDelete).Subrouter()
-	deleteRouter.HandleFunc("/products/{id}", ph.DeleteProducts)
+	deleteRouter.HandleFunc("/products/{id:[0-9]+}", ph.DeleteProducts)
 
 	// ReDocs- Swagger
 	// make swagger
@@ -82,19 +96,21 @@ func main() {
 
 	// new server- address, handler, tls, timeouts
 	s := &http.Server{
-		Addr:         ":9090",
+		Addr:         *bindAddress,
 		Handler:      cors(sm),
+		ErrorLog:     l.StandardLogger(&hclog.StandardLoggerOptions{}),
+		ReadTimeout:  5 * time.Second,
+		WriteTimeout: 10 * time.Second,
 		IdleTimeout:  120 * time.Second,
-		ReadTimeout:  1 * time.Second,
-		WriteTimeout: 1 * time.Second,
 	}
 
 	// start server listen as a non-blocking separate go routine
 	go func() {
-		log.Printf("Started http server at 9090...")
+		l.Info("Started server on port 9090...")
 		err := s.ListenAndServe()
 		if err != nil {
-			log.Fatal(err)
+			l.Error("error starting server", "error", err)
+			os.Exit(1)
 		}
 	}()
 
@@ -104,7 +120,7 @@ func main() {
 
 	// graceful shutdown when recieve input in sigChan, blocking operation
 	sig := <-sigChan
-	log.Println("Recieved terminate in sigChan, initiating graceful shutdown... sig:", sig)
+	l.Info("Recieved terminate in sigChan, initiating graceful shutdown... sig:", sig)
 	tc, cancel := context.WithTimeout(context.Background(), 30*time.Second)
 	// Even though ctx will be expired, it is good practice to call its
 	// cancellation function in any case. Failure to do so may keep the
