# product-api/swagger.yaml
@@ -3,15 +3,17 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError GenericError is a generic error message
+      returned by a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: github.com/satoshi-u/go-microservices/product-api/handlers
+    x-go-package: github.com/satoshi-u/go-microservices/product-api/sdk/models
   Product:
-    description: Product defines the structure for an API product
+    description: Product Product Product defines the structure for an API product
     properties:
       description:
         description: the description for this poduct
@@ -45,17 +47,19 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: github.com/satoshi-u/go-microservices/product-api/data
+    x-go-package: github.com/satoshi-u/go-microservices/product-api/sdk/models
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError ValidationError is a collection of
+      validation error messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: github.com/satoshi-u/go-microservices/product-api/handlers
+    x-go-package: github.com/satoshi-u/go-microservices/product-api/sdk/models
 host: localhost
 info:
   description: Documentation of Product API
@@ -66,6 +70,13 @@ paths:
     get:
       description: Returns a list of products from the database
       operationId: getProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when none specified, price is returned in EUR.
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -146,6 +157,12 @@ paths:
       description: Returns the product with given id from db
       operationId: getProduct
       parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when none specified, price is returned in EUR.
+        in: query
+        name: Currency
+        type: string
       - description: The id of the product for which the operation relates
         format: int64
         in: path
